Add error message when startup parameters are missing.